added new font style and more front end for manga

--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -5,9 +5,9 @@ text style
 }
 
 h1, h2, h3, h4, h5, h6, p, hr, form {
-  font-family: Arial, sans-serif;
+  font-family: 'Fugaz One', serif;
   color: #FFFFD2;
-  text-shadow: 1px 1px 3px rgba(128, 107, 0, 0.4);
+  text-shadow: 1px 1px 2px rgba(128, 107, 0, 0.8);
 }
 
 // svg icon from font awesome
