--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -15,6 +15,7 @@
   }
 
   .nav-item {
+    font-family: 'Fugaz One', serif;
     background-color: #A7e9cd;
   }
 
@@ -106,7 +107,7 @@ a:hover {
   color: black;
 }
 
-// li:hover{
+// li{
 //   color: white;
 //   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 //   transition: 0.2s;
