--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -19,8 +19,26 @@
     background-color: #A7e9cd;
   }
 
-    // AJAX search bar
-  .navbar-nav .search-form {
+  // avatar dropdown container
+  .dropdown-menu-end {
+    transform: translateY(-39%);
+    font-family: 'Fugaz One', serif;
+    font-weight: 100;
+    font-size: 0.80em;
+    line-height: 1.1;
+    background: linear-gradient(rgba(174, 231, 207, 0.85), rgba(211, 219, 215, 0.95));
+    border: none;
+    border-radius: 58px;
+  }
+
+  // objects in avatar menu dropdown
+  .dropdown-item {
+    color:#7b7699;
+    text-align: center;
+  }
+  // AJAX search bar
+    // conatainer
+    .navbar-nav .search-form {
     width: 100%;
     margin: 0 auto;
     display: flex;
@@ -28,26 +46,31 @@
     flex-wrap: wrap;
   }
 
+  // main container
   .search-form {
     height: 50px;
     align-self: center;
     display: flex;
   }
 
+  // search input container
   .form-control.me-2 {
   background: linear-gradient(#d3dbd7, #Aee7cf,);
-  border-radius: 58px;
+  border-radius: 25px;
   border-color: transparent;
   box-shadow: 0 0 px 0 #ccc;
   width: 500px;
   }
 
+  // search input bar
   .search-input {
     width: 58%;
     display: flex;
     align-items: center;
 
   }
+
+  // magnifying glass icon in searchbar
   .search-button {
     margin: -35px;
     background: none;
@@ -56,19 +79,24 @@
     cursor: pointer;
   }
 
+  // AJAX injection results
   #dropdown-select {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Fugaz One', serif;
+    font-weight: 100;
+    font-size: 0.80em;
+    line-height: 1.1;
     color:#7b7699;
     background: linear-gradient(#Aee7cf,#d3dbd7);
     border: none;
-    width: 225px;
+    width: 250px;
   }
 
+  // avatar dropdown
   .search-and-dropdown {
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 500px;
+     max-width: 500px;
     margin: 0 auto;
   }
 
