added fancy front end in index

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,7 +3,7 @@
   <div class="container-fluid">
     <%# Logo button %>
     <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag "brand_logoo.jpg", class: "img-fluid", style: "max-height: 40px;" %>
+      <%= image_tag "illustree_logo.jpg", class: "img-fluid", style: "max-width: 50px;" %>
     <% end %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
