--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,17 +1,20 @@
 // Le Wagon boilerplate
-.hidden {
-  display: none;
-}
+  .hidden {
+    display: none;
+  }
+
   .navbar {
     font-family: 'Roboto', sans-serif;
     position: relative;
     background: linear-gradient(#A7e9cd, #a7e9cd);
   }
+
   .navbar-brand {
     font-weight: bold;
   }
   .nav-link {
     color: #458469;
+
   }
 
   .nav-item {
@@ -31,13 +34,15 @@
     border-radius: 58px;
   }
 
+
+
   // objects in avatar menu dropdown
   .dropdown-item {
     color:#7b7699;
     text-align: center;
   }
   // AJAX search bar
-    // conatainer
+    // container
     .navbar-nav .search-form {
     width: 100%;
     margin: 0 auto;
@@ -55,19 +60,18 @@
 
   // search input container
   .form-control.me-2 {
-  background: linear-gradient(#d3dbd7, #Aee7cf,);
+  background: linear-gradient(#d3dbd7, #Aee7cf);
   border-radius: 25px;
   border-color: transparent;
   box-shadow: 0 0 px 0 #ccc;
   width: 500px;
   }
 
-  // search input bar
+   // search input bar
   .search-input {
     width: 58%;
     display: flex;
     align-items: center;
-
   }
 
   // magnifying glass icon in searchbar
@@ -96,7 +100,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-     max-width: 500px;
+    max-width: 500px;
     margin: 0 auto;
   }
 
