--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,6 +1,6 @@
 .avatar {
-  width: 40px;
-  height: auto;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
 }
 
@@ -31,8 +31,7 @@
 .avatar-user {
   // font-size: 4em;
   background-color: #A8EACE;
-  padding: 0.5em;
   border-radius: 50%;
   width: 100px;
-  height: auto;
+  height: 100px;
 }
