--- a/app/views/mangas/show.html.erb
+++ b/app/views/mangas/show.html.erb
@@ -20,8 +20,8 @@
       <%# tag %>
       <div class="d-flex flex-row gap-1 py-2">
         <% @manga.tag_list.each do |tag| %>
-          <div class="badge rounded-pill">
-            #<%= link_to tag, mangas_path(tag: tag) %>
+          <div class="badge rounded-pill" style="background-color: rgba(0, 0, 0, 0.6); color: white;">
+            #<%= link_to tag, mangas_path(tag: tag), style: "color: white;" %>
           </div>
         <% end %>
       </div>
@@ -100,7 +100,7 @@
 
 <style>
 .manga-container {
- background-color: rgba(255, 255, 255, 0.2);
+ background: rgba(0, 0, 0, 0.6);
  border-radius: 4px;
  padding: 12px;
 }
