--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -11,12 +11,13 @@
     font-weight: bold;
   }
   .nav-link {
-    color: #458469;
+    color: black;
   }
 
   .nav-item {
     font-family: 'Fugaz One', serif;
     background-color: #A7e9cd;
+    padding: 15px;
   }
 
     // AJAX search bar
@@ -35,11 +36,12 @@
   }
 
   .form-control.me-2 {
-  background: linear-gradient(#d3dbd7, #Aee7cf,);
+  background: linear-gradient(whitesmoke, #Aee7cf,);
   border-radius: 58px;
   border-color: transparent;
-  box-shadow: 0 0 px 0 #ccc;
+  // box-shadow: 0 0 px 0 #ccc;
   width: 500px;
+  border: none;
   }
 
   .search-input {
@@ -59,7 +61,8 @@
   #dropdown-select {
     font-family: 'Roboto', sans-serif;
     color:#7b7699;
-    background: linear-gradient(#Aee7cf,#d3dbd7);
+    background: linear-gradient(#Aee7cf,whitesmoke);
+    // background: linear-gradient(whitesmoke,#Aee7cf );
     border: none;
     width: 225px;
   }
@@ -83,7 +86,7 @@
 
   // manga genres
 .manga-genre-navbar{
-  background: linear-gradient(to top, #A8EACE, whitesmoke);
+  background: linear-gradient(to bottom, #A8EACE, whitesmoke);
   font-weight: bold;
   height: 36px;
   font-size: 1.2em;
@@ -92,14 +95,14 @@
 
 li {
   list-style: none;
-  text-decoration: none;
+  font-family: 'Fugaz One', serif;
   color: black;
-  font-style: bold;
+  // font-style: bold;
 }
 
 a {
   text-decoration: none;
-  font-style: bold;
+  // font-style: bold;
   color: black;
 }
 
@@ -109,9 +112,3 @@ a:hover {
   background-color: whitesmoke;
   border-radius: 3px;
 }
-
-// li{
-//   color: white;
-//   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-//   transition: 0.2s;
-// }
