absolute final changes in

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,7 +1,7 @@
 .button {
-  display: inline-block;
+  // display: inline-block;
   padding: 0.5rem 1rem;
-  background-color: #A8EACE;
+  // background-color: #A8EACE;
   color: #fff;
   text-decoration: none;
   border-radius: 4px;
