--- a/app/views/mangas/new.html.erb
+++ b/app/views/mangas/new.html.erb
@@ -7,6 +7,6 @@
     <% end %>
   </div>
 
-  <h1 class="d-flex justify-content-center"><i class="fa-solid fa-star"></i>New Manga<i class="fa-solid fa-star"></i></h1>
+  <h1 class="d-flex justify-content-center"><span style="background-color: rgba(0, 0, 0, 0.8); color: #FFFFFF; padding: 5px; border-radius: 10px;"><i class="fa-solid fa-star"></i>New Manga<i class="fa-solid fa-star"></i></span></h1>
   <%= render "form_manga", manga: @manga%>
 </div>
