--- a/app/assets/stylesheets/pages/_chaptershow.scss
+++ b/app/assets/stylesheets/pages/_chaptershow.scss
@@ -4,24 +4,24 @@
     padding: 1rem;
   }
 
-  .chapter-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 0.5rem;
-    margin-bottom: 1rem;
-  }
+  // .chapter-header {
+  //   display: flex;
+  //   justify-content: space-between;
+  //   align-items: center;
+  //   border-bottom: 1px solid #ccc;
+  //   padding-bottom: 0.5rem;
+  //   margin-bottom: 1rem;
+  // }
 
 
-  .chapter-photos {
-    overflow-y: scroll;
-    max-height: 800px;
-    display: flex;
-    flex-direction: column;
-    padding: 1rem 0;
-    align-items: center;
-  }
+  // .chapter-photos {
+  //   overflow-y: scroll;
+  //   max-height: 800px;
+  //   display: flex;
+  //   flex-direction: column;
+  //   padding: 1rem 0;
+  //   align-items: center;
+  // }
 
   .chapter-photo {
     width: 700px;
@@ -69,7 +69,7 @@
   label {
     display: block;
     margin-bottom: 5px;
-    color: #000;
+    color: #ffffd2;
   }
 
   textarea,
@@ -82,7 +82,7 @@
   }
 
   input[type="submit"] {
-    background-color: #f89406;
+    background-color: rgba(0, 0, 0, 0.8);
     color: #fff;
     padding: 8px 16px;
     border: none;
