--- a/app/views/mangas/show.html.erb
+++ b/app/views/mangas/show.html.erb
@@ -3,7 +3,7 @@
   <div class="manga-container d-flex mx-4">
     <div class="manga-cover-image">
       <% if @manga.cover_image.attached? %>
-        <%= cl_image_tag @manga.cover_image.key, width: 300, height: 380, crop: :fill, alt: @manga.manga_title, :quality => "auto", :fetch_format => "auto" %>
+        <%= cl_image_tag @manga.cover_image.key, alt: @manga.manga_title, :quality => "auto", :fetch_format => "auto" %>
       <% else %>
         <p>No cover image</p>
       <% end %>
@@ -11,16 +11,17 @@
 
     <div class="ps-3">
       <%# manga info %>
-      <h1><strong>Title:</strong><%= @manga.manga_title %></h1>
-      <h1><strong>Author:</strong><%= @manga.user.username %></h1>  <%# TODO: able to link the author name to the user dashboard %>
-      <%# <%= link_to "#{@manga.user.username}", dashboard_index_path(@manga.user) </h3> %>
-      <h1>Description:<%= @manga.description %></h1>
+      <div>
+        <h2 class="text-uppercase" style="color: #FFFD2; font-weight: bold; margin-bottom: 10px;"><%= @manga.manga_title %></h2>
+        <h4 style="color: #FFFD2; margin-bottom: 20px;">By <%= @manga.user.username %></h4>
+        <p style="color: #FFFD2; font-size: 18px;"><%= @manga.description %></p>
+      </div>
 
 
       <%# tag %>
       <div class="d-flex flex-row gap-1 py-2">
         <% @manga.tag_list.each do |tag| %>
-          <div class="badge rounded-pill" style="background-color: rgba(0, 0, 0, 0.6); color: white;">
+          <div class="badge rounded-pill" style="background-color: rgba(0, 0, 0, 0.8); color: white;">
             #<%= link_to tag, mangas_path(tag: tag), style: "color: white;" %>
           </div>
         <% end %>
@@ -29,7 +30,7 @@
       <%# bookmark button or if manga creater then its an edit button %>
       <div class="align-items-end">
         <% if current_user == @manga.user %>
-          <%= link_to 'Edit', manga_chapters_path(@manga), class: "button" %>
+         <%= link_to 'Edit', manga_chapters_path(@manga), class: "button", style: "background-color: #FFFD2; color: rgba(0, 0, 0); font-size: 20px; padding: 10px 10px; text-decoration: none; border-radius: 5px;" %>
         <% else %>
           <% if current_user.favorited?(@manga) %>
             <%= button_to unfavorite_manga_path(@manga), method: :post, class: "bookmark-button" do %>
@@ -53,23 +54,31 @@
 
 
   <%# Manga Review %>
-  <h2>Manga Reviews</h2>
+  <h2 class="h2-style">Manga Reviews</h2>
    <%# add a new manga review %>
     <div>
       <%= form_with model: [ @manga, @manga.manga_reviews.build ], local: true, html: { class: "add-review-form" } do |form| %>
         <%# content %>
         <div class="form-group">
-          <%= form.label :content, class: "form-label" %>
+          <%= form.label :content, class: "form-label" do %>
+            <span style="background-color: rgba(0, 0, 0, 0.8); color: #FFFD2; padding: 5px;">
+              Content
+            </span>
+          <% end %>
           <%= form.text_area :content, required: true, class: "form-control", placeholder:"leave a comment!" %>
         </div>
         <%# rating %>
         <div class="form-group">
-          <%= form.label :rating, class: "form-label" %>
+          <%= form.label :content, class: "form-label" do %>
+            <span style="background-color: rgba(0, 0, 0, 0.8); color: #FFFD2; padding: 5px;">
+              Rating
+            </span>
+          <% end %>
           <%= form.select :rating, (1..5).to_a.reverse, required: true, class: "form-control", input_html: {data: {controller: "star-rating"}} %>
         </div>
         <%# submit button %>
         <div class="form-group">
-          <%= form.submit "Submit Review", class: "btn btn-primary" %>
+          <%= form.submit "Submit Review", class: "btn btn-primary", style: "background-color: rgba(0, 0, 0, 0.8); color: #FFFFD2;" %>
         </div>
       <% end %>
     </div>
@@ -101,11 +110,43 @@
 <style>
 .manga-container {
  background: rgba(0, 0, 0, 0.6);
- border-radius: 4px;
+ border-radius: 10px;
  padding: 12px;
 }
 
 label {
   color: #FFFFD2;
 }
+
+.manga-cover-image {
+  width: auto;
+  height: 100%;
+}
+
+.manga-cover-image img {
+  width: auto;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.h2-style {
+  display: inline-block;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #FFFFD2;
+  padding: 5px 10px;
+  border-radius: 10px;
+}
+
+.button {
+background-color: #FFFFD2;
+font-size: 20px;
+/* font-weight: bold; */
+padding: 15px;
+text-decoration: none;
+border-radius: 5px;
+transition: all 0.3s ease;
+font-family: 'Fugaz One', serif;
+}
+
 </style>
