--- a/app/views/mangas/_form_manga.html.erb
+++ b/app/views/mangas/_form_manga.html.erb
@@ -34,7 +34,7 @@
     </label>
 
     <div>
-      <%= form.submit "Submit", style: "background-color: rgba(168,234,206, 0.9); color: #FFFFD2;" %>
+      <%= form.submit "Sumbit", style: "background-color: rgba(168,234,206, 0.9); color: #FFFFD2;" %>
     </div>
   </div>
 <% end %>
